<resources>
    <string name="click_back_again">Нажмите НАЗАД ещё раз, чтобы выйти</string>
    <string name="app_name">mospolyhelper</string>
    <string name="nav_relevant">Актуальное</string>
    <string name="nav_schedule">Расписание</string>
    <string name="nav_account">Личный кабинет</string>
    <string name="nav_utilities">Полезности</string>
    <string name="appearance">Внешний вид</string>
    <string name="night_mode">Тёмная тема</string>
    <string name="add">Добавить</string>
    <string name="remove">Удалить</string>
    <string name="edit">Изменить</string>
    <string name="apply">Применить</string>
    <string name="cancel">Отмена</string>
    <string name="share">Поделиться</string>
    <string name="teachers">Преподаватели</string>
    <string name="date">Дата</string>
    <string name="time">Время</string>
    <string name="menu_schedule_user_choosing">Выбор расписания</string>
    <string name="menu_schedule_advanced_search">Продвинутый поиск</string>
    <string name="menu_schedule_filters">Фильтры</string>
    <string name="menu_schedule_calendar">Календарь</string>
    <string name="add_schedule">Добавить расписание</string>
    <string name="schedule_user_group">Группа %1$s</string>
    <string name="schedule_choose_user">Выберите расписание</string>
    <string name="schedule_add_user">Добавьте группу или преподавателя</string>
    <string name="schedule_date">%1$s, %2$d-я неделя</string>
    <string name="null_daily_schedule">В этот день нет занятий.\nМожно подольше поспать.</string>
    <string name="null_schedule">Расписание не найдено</string>
    <string name="schedule_not_chosen">Вы ещё не выбрали расписание</string>
    <string name="choose_schedule">Выбрать расписание</string>
    <string name="schedule_lesson_time">%1$s - %2$s</string>
    <string name="schedule_lesson_time_not_started">Начало в %1$s - через %2$s</string>
    <string name="schedule_lesson_time_almost_started">До начала %1$s</string>
    <string name="schedule_lesson_time_current">Идёт %1$s, конец в %2$s</string>
    <string name="schedule_info_break_title">Большой перерыв</string>
    <string name="schedule_info_break_description">У тебя будет 40 минут, чтобы перекусить или отдохнуть</string>
    <string name="schedule_info_window_title">Окно между занятиями</string>
    <string name="schedule_info_window_description">У тебя будет %1$s, чтобы перекусить или отдохнуть</string>
    <string name="schedule_lesson_empty">Нет занятий в это время</string>
    <string name="schedule_advanced_search_updated_recently">Расписание обновлялось менее дня назад</string>
    <string name="schedule_advanced_search_update_long_ago">Расписание обновлялось более месяца назад и могло устареть</string>
    <string name="schedule_advanced_search_not_downloaded">Расписание не загружено</string>
    <plurals name="schedule_advanced_search_updated">
        <item quantity="one">Расписание обновлялось %d день назад</item>
        <item quantity="few">Расписание обновлялось %d дня назад</item>
        <item quantity="other">Расписание обновлялось %d дней назад</item>
    </plurals>
    <string name="lesson_titles">Предметы</string>
    <string name="lesson_types">Типы занятий</string>
    <string name="groups">Группы</string>
    <string name="auditoriums">Аудитории</string>
    <string name="all_subjects">Все предметы</string>
    <string name="all_lesson_types">Все типы занятий</string>
    <string name="all_teachers">Все преподаватели</string>
    <string name="all_groups">Все группы</string>
    <string name="all_auditoriums">Все аудитории</string>
    <string name="download_schedules">Загрузить расписание</string>
    <string name="update_schedules">Обновить расписание</string>
    <string name="select_all">Выбрать все</string>
    <string name="unselect_all">Снять все</string>
    <string name="advanced_search">Расширенный поиск</string>
    <string name="schedule_lesson_tags_select">Выберите метки для занятия</string>
    <string name="schedule_lesson_tags_empty">Добавьте метки</string>
    <string name="schedule_lesson_tag_example">Пример</string>
    <string name="create_new_tag">Создать новую метку</string>
    <string name="create_tag">Создание метки</string>
    <string name="enter_tag_name">Введите название метки</string>
    <string name="tag_with_title_exist">Метка с таким названием уже существует</string>
    <string name="tag_with_empty_title">Вы не ввели название метки</string>
    <string name="schedule_lesson_info_edit_tags">Изменить метки</string>
    <string name="schedule_lesson_info_auditoriums">Аудитории</string>
    <string name="schedule_lesson_info_teachers">Преподаватели</string>
    <string name="schedule_lesson_info_groups">Группы</string>
    <string name="pref_category_appwidget">Виджет</string>
    <string name="pref_appwidget_schedule_show_order">Номер занятия</string>
    <string name="pref_appwidget_schedule_show_order_summary">Показывать номер занятия</string>
    <string name="pref_appwidget_schedule_show_start_time">Время начала занятия</string>
    <string name="pref_appwidget_schedule_show_start_time_summary">Показывать время начала занятия</string>
    <string name="pref_appwidget_schedule_show_end_time">Время конца занятия</string>
    <string name="pref_appwidget_schedule_show_end_time_summary">Показывать время конца занятия</string>
    <string name="pref_appwidget_schedule_show_type">Тип занятия</string>
    <string name="pref_appwidget_schedule_show_type_summary">Показывать тип занятия</string>
    <string name="pref_appwidget_schedule_show_teachers">Преподаватели</string>
    <string name="pref_appwidget_schedule_show_teachers_summary">Показывать преподавателей</string>
    <string name="pref_appwidget_schedule_show_groups">Группы</string>
    <string name="pref_appwidget_schedule_show_groups_summary">Показывать группы</string>
    <string name="pref_appwidget_schedule_show_auditoriums">Аудитории</string>
    <string name="pref_appwidget_schedule_show_auditoriums_summary">Показывать аудитории</string>
    <string name="settings_title">Настройки</string>
    <string name="predmet_title">Какой предмет?</string>
    <string name="deadline_descr">Что нужно сделать?</string>
    <string name="importanceLow">Неважно</string>
    <string name="importanceMedium">Средне</string>
    <string name="importanceHigh">Важно</string>
    <string name="deadline_time">До какого времени?</string>
    <string name="deadline_date">До какого числа?</string>
    <string name="updateButton">Обновить</string>
    <string name="emptyList">Дедлайнов нет :(</string>
    <string name="predmetError">Заполните описание!</string>
    <string name="deleteDeadline">Дедлайн удален</string>
    <string name="pinnedImage">Иконка закрепления</string>
    <string name="clockImage">Иконка часов</string>
    <string name="predmetSample">ПРЕДМЕТ ПРЕДМЕТ ПРЕДМЕТ ПРЕДМЕТ ПРЕДМЕТ ПРЕДМЕТ ПРЕДМЕТ ПРЕДМЕТ</string>
    <string name="zadSample">Задание Задание Задание Задание Задание Задание Задание Задание Задание Задание Задание Задание Задание Задание</string>
    <string name="dataSample">Пн, 01.01.2020, 00:00</string>
    <string name="pin">pinned</string>
    <string name="unpin">unpinned</string>
    <string name="nav_deadlines">Дедлайны</string>
    <string name="base_info">%1$s %2$s курс группы %3$s</string>
    <string name="notification_channel_schedule_current_lesson">Текущее занятие</string>
    <string name="university_pass_service_description">Служба NFC пропуска Московского Политеха</string>
    <string name="university_pass_aid_description">Relvest</string>
    <string name="hce_not_supported_title">Эмуляция карт не поддерживается</string>
    <string name="hce_not_supported_message">Работа приложения будет завершена.</string>
    <string name="hce_not_supported_ok_button">OK</string>
    <string name="activate_hce_service">Активировать</string>
    <string name="deactivate_hce_service">Деактивировать</string>
    <string name="user_id">Идентификатор пользователя:\10%1$s</string>
    <string name="service_active">Служба активна.</string>
    <string name="service_inactive">Служба неактивна.</string>
    <string name="about_app">Неофициальное приложение - помощник
для студентов и преподавателей Московского Политеха.\n\n
Разработчики:\n\n
Андрей Богомолов\n
VK: https://vk.com/tipapro\n
Github: https://github.com/tipapro\n\n
Александр Дындин\n
VK: https://vk.com/alexandr_dyndin\n
Github: https://github.com/alexanderdyndin
    </string>
    <string name="auth">Авторизация</string>
    <string name="info">Информация</string>
    <string name="applications">Справки</string>
    <string name="Payments">Оплата</string>
    <string name="Students">Студенты</string>
    <string name="Student">Студент</string>
    <string name="classmates">Одногруппники</string>
    <string name="statements">Электронная зачетная книжка</string>
    <string name="account">Аккаунт</string>
    <string name="nav_dialogs">Диалоги</string>
    <string name="nothing_found">Ничего не найдено</string>
    <string name="Dialog">Диалог</string>
    <string name="delete_message">Удалить сообщение</string>
    <string name="settings">Настройки</string>
    <string name="addresses">Адреса</string>
    <string name="pass">Пропуск\n(пока недоступно)</string>
    <string name="menu_about_app">О приложении</string>
    <string name="logout">Выйти</string>
    <string name="hello_msg">Здравствуйте,\n%1$s!</string>
    <string name="login">Войти</string>
    <string name="nickname">Логин</string>
    <string name="password">Пароль</string>
    <string name="avatar">avatar</string>
    <string name="not_authorized">Неверный логин или пароль</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="check_connection">Проверьте подключение к интернету</string>
    <string name="your_message">Вы: %1$s</string>
    <string name="marks">Оценки</string>
    <string name="fio_input">Введите ФИО студента</string>
    <string name="retry">Повторить</string>
    <string name="loading_error">Ошибка загрузки данных</string>
    <string name="fio">ФИО</string>
    <string name="search_student">Введите фамилию или группу</string>
    <string name="search_teacher">Введите фамилию преподавателя</string>
    <string name="search_classmate">Введите ФИО</string>
    <string name="input_message">Введите сообщение</string>
    <string name="course">%1$s курс</string>
    <string name="semester">%1$s семестр</string>
    <string name="info_student">%1$s %2$s-го курса группы %3$s</string>
    <string name="info_student_without_group">%1$s %2$s-го курса</string>
    <string name="education_form">Форма обучения: %1$s</string>
    <string name="direction">Направление: %1$s</string>
    <string name="specialization">Специализация: %1$s</string>
    <string name="exam">Экзамен</string>
    <string name="reg_application">Регистрационный номер: %1$s</string>
    <string name="applic_adress">Структурное подразделение, адрес: %1$s</string>
    <string name="prim">Примечание: %1$s</string>
    <string name="payment_left">Осталось заплатить %1$s из %2$s руб.</string>
    <string name="payment">%1$s руб.</string>
    <string name="payment_credit">Задолженность %1$s руб. на %2$s</string>
    <string name="payment_debet">Переплата %1$s руб. на %2$s</string>
    <string name="payment_no_credit">Задолженности на %1$s нет</string>
    <string name="unauthorized">Необходима авторизация</string>
    <string name="authorize">Войти</string>
    <string name="download_statement">Скачать ведомость</string>
    <string name="open_browser">Открыть в браузере</string>
    <string name="dormitory">Общежитие</string>
    <string name="tuition">Обучение</string>
    <string name="ed_form">%1$s %2$s форма обучения</string>
    <string name="ed_year">%1$s год набора</string>
    <string name="student">СТУДЕНТ</string>
    <string name="apartment">Общежитие №%1$s, комната %2$s</string>
    <string name="aspirant">Аспирант</string>
</resources>