<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_auth"
        android:icon="@drawable/ic_fluent_person_circle_20_regular"
        android:title="@string/auth"
        android:visible="true"/>
    <item
        android:id="@+id/nav_info"
        android:icon="@drawable/ic_fluent_info_20_regular"
        android:title="@string/info"
        android:visible="false"/>
    <item
        android:id="@+id/nav_applications"
        android:icon="@drawable/ic_fluent_text_bullet_list_square_20_regular"
        android:title="@string/applications"
        android:visible="false"/>
    <item
        android:id="@+id/nav_marks"
        android:icon="@drawable/ic_fluent_book_star_24_regular"
        android:title="@string/marks"
        android:visible="false"/>
    <item
        android:id="@+id/nav_payments"
        android:icon="@drawable/ic_fluent_payment_20_regular"
        android:title="@string/Payments"
        android:visible="false"/>
    <item
        android:id="@+id/nav_students"
        android:icon="@drawable/ic_fluent_people_20_regular"
        android:title="@string/Students"
        android:visible="false"/>
    <item
        android:id="@+id/nav_teachers"
        android:icon="@drawable/ic_fluent_hat_graduation_20_regular"
        android:title="@string/teachers"
        android:visible="false"/>
    <item
        android:id="@+id/nav_classmates"
        android:icon="@drawable/ic_fluent_person_20_regular"
        android:title="@string/classmates"
        android:visible="false"/>
    <item
        android:id="@+id/nav_deadlines"
        android:icon="@drawable/ic_fluent_task_list_square_ltr_20_regular"
        android:title="@string/nav_deadlines"
        android:visible="false"/>
    <item
        android:id="@+id/nav_statements"
        android:icon="@drawable/ic_fluent_clipboard_text_ltr_20_regular"
        android:title="@string/statements"
        android:visible="false"/>
    <item
        android:id="@+id/nav_dialogs"
        android:icon="@drawable/ic_fluent_chat_20_regular"
        android:title="@string/nav_dialogs"
        android:visible="false"/>
</menu>