<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
<!--        <item-->
<!--            android:id="@+id/nav_relevant"-->
<!--            android:icon="@drawable/ic_fluent_home_20_selector"-->
<!--            android:title="Relevant" />-->
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_fluent_calendar_empty_20_selector"
            android:title="@string/nav_schedule" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_fluent_person_20_selector"
            android:title="@string/nav_account"/>
        <item
            android:id="@+id/nav_utilities"
            android:icon="@drawable/ic_fluent_apps_20_selector"
            android:title="@string/nav_utilities"/>
    </group>

</menu>
