<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item android:id="@+id/menu_schedule_user_choice"
        android:icon="@drawable/ic_fluent_person_circle_20_regular"
        android:orderInCategory="99"
        app:showAsAction="never"
        android:title="@string/menu_schedule_user_choosing"/>
    <item android:id="@+id/schedule_advanced_search"
        android:icon="@drawable/ic_fluent_search_20_regular"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/menu_schedule_advanced_search" />
<!--    <item android:id="@+id/menu_schedule_filter"-->
<!--        android:icon="@drawable/ic_fluent_filter_20_regular"-->
<!--        android:orderInCategory="101"-->
<!--        app:showAsAction="never"-->
<!--        android:title="@string/menu_schedule_filters" />-->
    <item android:id="@+id/menu_schedule_calendar"
        android:icon="@drawable/ic_fluent_calendar_ltr_20_regular"
        android:orderInCategory="102"
        app:showAsAction="never"
        android:title="@string/menu_schedule_calendar" />
</menu>