<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:background="@drawable/shape_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/view2"
            android:layout_width="35dp"
            android:layout_height="5dp"
            android:background="@drawable/shape_swipe_indicator" />

        <TextView
            android:id="@+id/textview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/ubuntu"
            android:textColor="@color/text_color_primary"
            android:textSize="26sp"
            android:text="@string/advanced_search" />

        <LinearLayout
            android:background="@drawable/shape_additional_info"
            android:elevation="3dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_marginTop="14dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:id="@+id/textview_schedule_status"
                android:textColor="@color/text_color_secondary"
                android:textSize="15sp"
                android:breakStrategy="balanced"
                android:fontFamily="@font/ubuntu_medium"
                tools:text="@string/schedule_advanced_search_updated_recently"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp" />

            <ProgressBar
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:visibility="gone"
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:max="10000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:visibility="gone"
                    android:id="@+id/textview_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0 %"
                    android:textAlignment="center"
                    android:textColor="@color/text_color_primary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:visibility="gone"
                    android:id="@+id/button_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/cancel"
                    android:textColor="@color/color_secondary"
                    android:textSize="16sp" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_download"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:layout_marginBottom="14dp"
                tools:text="@string/download_schedules" />
        </LinearLayout>

        <ProgressBar
            android:visibility="gone"
            tools:visibility="visible"
            android:id="@+id/progressbar_schedule"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/textview_lesson_titles_label"
            style="@style/TextH1Style"
            android:textColor="@color/text_color_primary"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/lesson_titles"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TextFeaturesStyle"
            android:visibility="gone"
            android:id="@+id/textview_lesson_titles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="15dp"

            android:maxLines="5"
            tools:text="@string/all_subjects" />

        <TextView
            android:id="@+id/textview_lesson_types_label"
            style="@style/TextH1Style"
            android:textColor="@color/text_color_primary"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/lesson_types"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TextFeaturesStyle"
            android:visibility="gone"
            android:id="@+id/textview_lesson_types"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="15dp"
            android:ellipsize="end"
            android:maxLines="5"
            tools:text="@string/all_lesson_types" />

        <TextView
            android:id="@+id/textview_teachers_label"
            style="@style/TextH1Style"
            android:textColor="@color/text_color_primary"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/teachers"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TextFeaturesStyle"
            android:visibility="gone"
            android:id="@+id/textview_teachers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="15dp"
            android:ellipsize="end"
            android:maxLines="5"
            tools:text="@string/all_teachers" />

        <TextView
            android:id="@+id/textview_groups_label"
            style="@style/TextH1Style"
            android:textColor="@color/text_color_primary"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/groups"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TextFeaturesStyle"
            android:visibility="gone"
            android:id="@+id/textview_groups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="15dp"
            android:ellipsize="end"
            android:maxLines="5"
            tools:text="@string/all_groups" />

        <TextView
            android:id="@+id/textview_auditoriums_label"
            android:visibility="gone"
            style="@style/TextH1Style"
            android:textColor="@color/text_color_primary"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/auditoriums"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TextFeaturesStyle"
            android:visibility="gone"
            android:id="@+id/textview_auditoriums"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="15dp"
            android:ellipsize="end"
            android:maxLines="5"
            tools:text="@string/all_auditoriums" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/ButtonStyle"
            android:visibility="gone"
            android:id="@+id/button_apply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="12dp"
            android:text="@string/apply" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>